Add limestone, add CoFHCore dependency